@@ -38,6 +38,8 @@ Post-v2.15.0
      * Add study function to miniflow function table which studies packet
        and automatically chooses the best miniflow implementation for that
        traffic.
+     * Add build time configure command to enable auto-validatior as default
+       miniflow implementation at build time.
    - ovs-ctl:
      * New option '--no-record-hostname' to disable hostname configuration
        in ovsdb on startup.
@@ -56,7 +58,6 @@ Post-v2.15.0
    - OVS now reports the datapath capability 'ct_zero_snat', which reflects
      whether the SNAT with all-zero IP address is supported.
      See ovs-vswitchd.conf.db(5) for details.
-
 
 v2.15.0 - 15 Feb 2021
 ---------------------
